# xRust

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  build.rs  rustfmt.toml
asyncwait/: Cargo.toml
asyncwait/src/: async_trait_example.rs  async_weighted_semaphore_examples.rs  asyncio.rs  barrier.rs  future.rs  lib.rs  main.rs  runtimes.rs  trigger.rs  waitgroup.rs
asyncwait/src/primitive/: async_lock.rs  mod.rs
axum_utils/: Cargo.toml
axum_utils/views/: chat.html
channel/: Cargo.toml
channel/src/: lib.rs  main.rs  oneshots.rs
channel/tests/: test_close_channel.rs
clipboard/: Cargo.toml
clipboard/src/: action.rs  buffer.rs  clipboard.rs  data.rs  formats.rs  lib.rs  raw.rs  raw_mem.rs  sys.rs  types.rs  utils.rs
clipboard/tests/: test_bitmap_to_png.rs
core_utils/: .gitignore  Cargo.toml  nextest.md  test.sh
core_utils/src/: aes.rs  cached_bool.rs  condition.rs  console.rs  convert.rs  datetime.rs  debug.rs  displayable.rs  error.rs  kv.rs  lib.rs  macros.rs  main.rs  matcher.rs  panic.rs  random.rs  set.rs  str.rs  var.rs  vec2.rs  version.rs  zip.rs
core_utils/src/cmd/: color.rs  mod.rs  outputs.rs  utils.rs
core_utils/src/cmd/assert/: assert.rs  error.rs  mod.rs  output_assert_ext.rs  reason.rs  tree.rs
core_utils/src/cmd/cargo/: cargo.rs  error.rs  mod.rs
core_utils/src/cmd/outputs/: error.rs  mod.rs  output.rs
core_utils/src/cmd/predicate/: bytes_content_output_predicate.rs  eq_code_predicate.rs  in_code_predicate.rs  into_code.rs  into_output.rs  mod.rs  str_content_output_predicate.rs  str_output_predicate.rs
core_utils/src/cmd/process/: cmd.rs
core_utils/src/error/: mod.rs  path.rs  signal.rs
core_utils/src/ffi/: buffer.rs  console.rs  fmt.rs  mem.rs  mod.rs  string.rs  sys.rs  types.rs  utils.rs
core_utils/src/ffi/lib_c/: error.rs  file.rs  mod.rs  os_str.rs  str.rs  string.rs
core_utils/src/file/: builder.rs  dir.rs  error.rs  file_type.rs  hash.rs  lock_file.rs  mod.rs  spooled.rs  temp.rs  temp_file.rs  temp_path.rs  util.rs
core_utils/src/image/: bitmap.rs
core_utils/src/iterator/: box.rs  mod.rs  normalized.rs
core_utils/src/logger/: log4rs.rs  mod.rs
core_utils/src/path/: abs.rs  error.rs  file_edit.rs  file_open.rs  file_read.rs  file_write.rs  mod.rs  path_dir.rs  path_file.rs  path_info.rs  path_mut.rs  path_ops.rs  path_type.rs  ser.rs
core_utils/src/platform/: fmt.rs  mod.rs  types.rs
core_utils/src/predicates/: boolean.rs  boxed.rs  case.rs  child.rs  close.rs  eq.rs  existence.rs  function.rs  iter.rs  mod.rs  name.rs  ord.rs  parameter.rs  predicate.rs  tree.rs
core_utils/src/process/: mod.rs  wait_timeout.rs
core_utils/src/random/: gen.rs  mod.rs  utils.rs
core_utils/src/regex/: mod.rs  replace_all.rs  replace_all_test.rs
core_utils/src/signal/: ctrlc.rs  mod.rs  signal.rs
core_utils/src/str/: ascii.rs  bstr.rs  bstring.rs  error.rs  escape_bytes.rs  ext_slice.rs  ext_vec.rs  format.rs  helper.rs  hexdigit.rs  macros.rs  mod.rs  split.rs  utf8.rs
core_utils/src/time/: week.rs
core_utils/tests/: data.yaml  test_aes.rs  test_condition.rs  test_ctrlc.rs  test_datetime.rs  test_file_hash.rs  test_hash.rs  test_image_bitmap_to_png.rs  test_iterator_normalized.rs  test_libc_error.rs  test_log4rs.rs  test_matcher.rs  test_panic.rs  test_path_dir.rs  test_path_info.rs  test_path_mut.rs  test_path_ops.rs  test_path_ser.rs  test_predicate_boolean.rs  test_predicate_boxed.rs  test_predicate_close.rs  test_predicate_contains.rs  test_predicate_diff.rs  test_predicate_endswith.rs  test_predicate_eq.rs  test_predicate_existence.rs  test_predicate_fc.rs  test_predicate_fs.rs  test_predicate_ft.rs  test_predicate_function.rs  test_predicate_is_empty.rs  test_predicate_iter.rs  test_predicate_matches.rs  test_predicate_name.rs  test_predicate_normalized.rs  test_predicate_regex.rs  test_predicate_startswith.rs  test_predicate_startwith.rs  test_predicate_trim.rs  test_predicate_utf8.rs  (+6 more)
logger/: Cargo.toml
logger/src/: builder.rs  env.rs  error.rs  level.rs  lib.rs  logger.rs  main.rs  messages.rs  meta_data.rs  record.rs  std_logger.rs  var.rs
logger/src/filter/: filter.rs  mod.rs  regex.rs  string.rs
logger/src/fmt/: atty.rs  builder.rs  color.rs  color_spec.rs  formatter.rs  mod.rs  target.rs  time.rs
logger/tests/: test_env_logger.rs  test_eprintln_locked.rs  test_level.rs  test_log.rs  test_meta_data.rs  test_record.rs
pool/: Cargo.toml
pool/src/: lib.rs  main.rs
process/: Cargo.toml
process/src/: lib.rs  main.rs  oslock.rs
process/tests/: test_std_io_pipe.rs
sync_primitive/: Cargo.toml
sync_primitive/src/: arc.rs  arcswap.rs  atomic.rs  barrier.rs  cond.rs  lib.rs  main.rs  mpsc.rs  mutex.rs  notify.rs  once.rs  rwlock.rs
terminal/: Cargo.toml
terminal/src/: attr.rs  color.rs  lib.rs  quirk.rs  style.rs  terminal.rs
terminal/tests/: test_is_terminal.rs
thread/: Cargo.toml
thread/src/: lib.rs  main.rs  threads.rs
wasm/: Cargo.toml
wasm/src/: greet.rs  lib.rs  point.rs  utils.rs
wasm/tests/: test_utils.rs  web.rs
windows_rs/: Cargo.toml  build.rs
windows_rs/src/: file.rs  lib.rs
windows_rs/tests/: test_com_uri.rs  test_consent.rs  test_create_window.rs  test_enum_windows.rs  test_file.rs  test_message_box_w.rs  test_message_box_w_sys.rs  test_performance.rs  test_thread_pool.rs  test_ui.rs  test_xml_document.rs
xtool/: Cargo.toml  test.sh
xtool/src/: borrow.rs  box.rs  cell.rs  const_stack.rs  cow.rs  enum.rs  env.rs  file.rs  lib.rs  link.rs  linked_list.rs  main.rs  numbers.rs  panic.rs  proxy.rs  rc.rs  stack.rs  to_owned.rs  unsafe_link.rs
xtool/tests/: test_asref.rs  test_borrow.rs  test_const_stack.rs  test_cow.rs  test_from.rs  test_inot_trait.rs  test_iter.rs  test_link.rs  test_linked_list.rs  test_numbers.rs  test_once_lock.rs  test_option.rs  test_osstr.rs  test_panic.rs  test_path.rs  test_pointer.rs  test_random.rs  test_rc.rs  test_ref_u8.rs  test_refcell.rs  test_result.rs  test_stack.rs  test_str.rs  test_string.rs  test_time.rs  test_toowned.rs  test_transmute.rs  test_unicode_segmentation.rs  test_unsafe_stack.rs  test_vec.rs
(+204 files in other folders)
