[package]
name = "xrust"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "thread",
    "pool",
    "asyncwait",
    "container_primitive",
    "sync_primitive",
    "collections",
    "process",
    "channel",
    "timer_examples",
    "todo_list",
    "xtool",
    "parking_lot_examples",
    "crossbeam_examples",
    "rayon_examples",
    "tokio_examples",
    "hello-wasm",
    "wechat",
    "logger",
    "core_utils",
    "clipboard",
    "windows_rs",
    "crypto_examples",
    "terminal",
    "str_examples",
]
