[package]
name = "asyncwait"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-lock = "2.8.0"
async-std = "1.12.0"
async-stream = "0.3.5"
async-trait = "0.1.72"
awaitgroup = "0.7.0"
future-utils = "0.12.1"
futures = { version = "0.3.28", features = ["thread-pool", "executor"] }
futures-lite = "1.13.0"
futures-util = "0.3.28"
help = "0.0.0"
smol = "1.3.0"
tokio = { version = "1.29.1", features = ["full"] }
