[package]
name = "axum_utils"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.95"
axum = "0.8.1"
listenfd = "1.0.1"
tokio = { version = "1.0", features = ["full"] }

[[bin]]
name = "anyhow-error-response"
path = "src/bin/anyhow_error_response.rs"

[[bin]]
name = "auto-reload"
path = "src/bin/auto_reload.rs"

