[package]
name = "channel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-channel = "1.9.0"
async-priority-channel = "0.1.0"
broadcaster = "1.0.0"
crossfire = "1.0.0"
flume = "0.11.0"
futures = "0.3.28"
futures-channel = "0.3.28"
futures-util = "0.3.28"
kanal = "0.1.0-pre8"
tokio = { version = "1.32.0", features = ["full"] }
