[package]
name = "clipboard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md"
]

build = "build.rs"

[dependencies]
core_utils = { path = "../core_utils" }

[target.'cfg(windows)'.dependencies]
error-code = "3.0.0"
windows = "0.51.1"

[features]
# 启动子包的std特性
std = ["error-code/std"]
