[package]
name = "core_utils"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anstyle = "1.0.6"
anyhow = "1.0.81"
base64 = "0.22.0"
bmp-rust = "0.4.1"
cfg-if = "1.0.0"
chrono = "0.4.31"
difflib = "0.4.0"
env_logger = "0.11.3"
error-code = "3.0.0"
fastrand = "2.0.1"
file-hashing = "0.1.2"
float-cmp = "0.9.0"
fslock = "0.2.1"
human-panic = "1.2.3"
image = "0.25.0"
is-terminal = { version = "0.4.7", optional = true }
log = "0.4.21"
log4rs = "1.3.0"
md-5 = "0.10.6"
nix = "0.28"
pretty_assertions = "1.4.0"
rand = "0.8.5"
rand_core = "0.6.4"
regex = "1.10.2"
rust-crypto = "0.2.36"
schemars = "0.8.16"
serde_json = "1.0.108"
serde_yaml = "0.9.33"
sha1 = "0.10.6"
tempfile = "3.8.1"
termtree = "0.4.1"
walkdir = "2.5.0"
zip = "0.6.6"
zip-extensions = "0.6.2"

[features]
default = ["detect-tty", "detect-env", "std", "serialize", "color"]
detect-env = ["std"]
detect-tty = ["is-terminal", "std"]
std = ["alloc"]
alloc = []
serialize = ["serde", "serde_derive", "stfu8"]
serde = ["dep:serde"]
color = []

[dependencies.windows]
version = "0.52"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_System_DataExchange",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_System_Console",
    "Win32_System_DataExchange",
    "Win32_Security",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    
]

#[target.'cfg(windows)'.dependencies.windows-sys]
#version = "0.48"
#features = ["Win32_Storage_FileSystem", "Win32_Foundation"]

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_System_Console",
    "Win32_System_LibraryLoader",
    "Win32_System_Registry",
    "Win32_System_SystemInformation",
    "Win32_System_SystemServices",
    "Win32_UI_WindowsAndMessaging",
] }

[target.'cfg(any(unix, target_os = "wasi"))'.dependencies]
rustix = { version = "0.38.21", features = ["fs"] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.28", default-features = false, features = [
    "fs",
    "signal",
] }

[dependencies.serde]
optional = true
version = "^1.0"

[dependencies.serde_derive]
optional = true
version = "^1.0"

[dependencies.stfu8]
optional = true
version = "^0.2.1"

[dev-dependencies]
serde_json = "1.0.108"

[target.'cfg(unix)'.dependencies.libc]
version = "^0.2.66"
default-features = false

[target.'cfg(windows)'.dependencies.winapi]
version = "^0.3.8"
features = [
    "minwindef",
    "minwinbase",
    "winbase",
    "errhandlingapi",
    "winerror",
    "winnt",
    "synchapi",
    "handleapi",
    "fileapi",
    "processthreadsapi",
]

[[bin]]
name = "human_panic"
path = "src/bin/human_panic.rs"
