[package]
name = "logger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core = { path = "../core" }
env_logger = "0.10.0"
humantime = { version = "2.1.0", optional = true }
is-terminal = { version = "0.4.9", optional = true }
log = "0.4.20"
regex = { version = "1.10.2", features = ["std", "perf"], default-features = false, optional = true }
termcolor = { version = "1.3.0", optional = true }

[features]
default = ["auto-color", "humantime", "regex"]
color = ["dep:termcolor"]
auto-color = ["dep:is-terminal", "color"]
humantime = ["dep:humantime"]
regex = ["dep:regex"]

[alias]
t = "test -- --nocapture --color always"
