[package]
name = "pool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
executor-service = "0.2.2"
executors = "0.9.0"
fast-threadpool = "0.3.0"
poolite = "0.7.1"
rayon = "1.7.0"
rusty_pool = "0.7.0"
scheduled-thread-pool = "0.2.7"
scoped-tls = "1.0.1"
scoped_threadpool = "0.1.9"
smol = "1.3.0"
threadpool = "1.8.1"
threadpool-executor = "0.3.2"
tokio = { version = "1.33.0", features = ["full"] }
workerpool-rs = "0.2.1"
