[package]
name = "process"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-process = "1.7.0"
easy_process = "0.2.1"
futures-lite = "1.13.0"
process_control = "4.0.3"
smol = "1.3.0"
subprocess = "0.2.9"
