[package]
name = "sync_primitive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atomic_float = "0.1.0"
atomicbox = "0.4.0"
atomig = "0.4.0"
portable-atomic = { version = "1.4.3", features = ["float"] }
rand = "0.8.5"
sharded-slab = "0.1.6"
slab = "0.4.9"
