[package]
name = "terminal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
all-features = true

[dependencies]
core_utils = { path = "../core_utils" }
yansi = "0.5.1"

[target.'cfg(not(any(windows, target_os = "hermit", target_os = "unknown")))'.dependencies]
rustix = { version = "0.38.0", features = ["termios"] }

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.48.0"
features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_Console",
]

[target.'cfg(windows)'.dev-dependencies]
tempfile  = "3"

[features]
default = ["std"]
std = []
alloc = []

# hidden feature to enable nightly doc cfg
_nightly = []
