[package]
name = "thread"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.8.2"
go-spawn = "0.1.2"
num_cpus = "1.16.0"
num_threads = "0.1.6"
parking = "2.1.0"
rayon = "1.7.0"
send_wrapper = "0.6.0"
thread-amount = "0.1.3"
thread-control = "0.1.2"
thread-priority = "0.13.1"

[target.'cfg(any(windows, linux))'.dependencies] 
affinity = "0.1.2"
