[package]
name = "windows_rs"
version = "0.1.0"
edition = "2021"
publish = false
default-run = "message_loop"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[dependencies.windows]
version = "0.51"
features = [
    "ApplicationModel_Core",
    "Data_Xml_Dom",
    "Devices_Enumeration",
    "Foundation",
    "Foundation_Collections",
    "implement",
    "Security_Credentials_UI",
    "Security_Cryptography_DataProtection",
    "Storage_Streams",
    "UI",
    "UI_Core",
    "Web_Syndication",
    "Win32_Foundation",
    "Win32_Globalization",
    "Win32_Graphics_Gdi",
    "Win32_Networking_BackgroundIntelligentTransferService",
    "Win32_Security",
    "Win32_Security_Credentials",
    "Win32_Storage_Packaging_Appx",
    "Win32_Storage_FileSystem",
    "Win32_System_Com",
    "Win32_System_IO",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_Performance",
    "Win32_System_Threading",
    "Win32_System_WinRT",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
]

[dependencies.windows-sys]
version = "0.48"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
]

[dependencies.windows-targets]
version = "0.48"

[dev-dependencies.windows-bindgen]
version = "0.48"

[[bin]]
name = "message_loop"
path = "src/bin/message_loop.rs"

[[bin]]
name = "windows_subsystem"
path = "src/bin/windows_subsystem.rs"
