[package]
name = "xtool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bstr = "1.9.1"
chrono = "0.4.31"
hyper = { version = "0.14.27", features = ["full"] }
lazy_static = "1.4.0"
rand = "0.8.5"
tokio = { version = "1.32.0", features = ["full"] }
unicode-segmentation = "1.11.0"
